Starting porting GridBase/ReadOnlyGrid to a common Win/Giz platform Improved formatting of FilterControlGiz

--- a/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
+++ b/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
@@ -53,6 +53,9 @@
     <Compile Include="TestDataViewFilterClauseFactoryWithStrings.cs" />
     <Compile Include="TestFilterControl.cs" />
     <Compile Include="TestFilterControlCheckBox.cs" />
+    <Compile Include="TestGridBase.cs">
+    </Compile>
+    <Compile Include="TestLabel.cs" />
     <Compile Include="TestListBox.cs" />
     <Compile Include="TestMultiSelector.cs" />
     <Compile Include="TestMultiSelectorModel.cs" />
