--- a/source/Habanero.UI.Base/Habanero.UI.Base.csproj
+++ b/source/Habanero.UI.Base/Habanero.UI.Base.csproj
@@ -43,6 +43,7 @@
     <Compile Include="FilterControl\DataViewNullFilterClause.cs" />
     <Compile Include="FilterControl\DataViewStringFilterClause.cs" />
     <Compile Include="FilterControl\FilterControlManager.cs" />
+    <Compile Include="GridBaseManager.cs" />
     <Compile Include="IButton.cs" />
     <Compile Include="ICheckBox.cs" />
     <Compile Include="IChilliControl.cs" />
@@ -50,6 +51,11 @@
     <Compile Include="IComboBoxObjectCollection.cs" />
     <Compile Include="IControlFactory.cs" />
     <Compile Include="FilterControl\IFilterControl.cs" />
+    <Compile Include="IDataGridViewColumnCollection.cs" />
+    <Compile Include="IDataGridViewRow.cs" />
+    <Compile Include="IDataGridViewRowCollection.cs" />
+    <Compile Include="IGridBase.cs" />
+    <Compile Include="ILabel.cs" />
     <Compile Include="IListBox.cs" />
     <Compile Include="IListBoxObjectCollection.cs" />
     <Compile Include="IListBoxSelectedObjectCollection.cs" />
@@ -63,6 +69,10 @@
     <ProjectReference Include="..\Habanero.Base\Habanero.Base.csproj">
       <Project>{D04BB138-C144-4406-9A41-17192E7D44BF}</Project>
       <Name>Habanero.Base</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Habanero.Bo\Habanero.BO.csproj">
+      <Project>{9ED22DDE-ED14-43CA-807A-D0A42DFBF322}</Project>
+      <Name>Habanero.BO</Name>
     </ProjectReference>
     <ProjectReference Include="..\Habanero.Util\Habanero.Util.csproj">
       <Project>{D3B50C81-590B-429F-9761-3B676D607DFF}</Project>
