Modified the FilterControl/FilterControlManager.cs to use FlowLayoutManager Started port of FilterControl DateTimePicker. Modified all IControl to use IChilliControl Moved namespace for layout managers in Habanero.UI.csproj to use Habanero.Ui so as to prevent namespace and control clashes with new FlowLayoutManager in Habanero.UI.Base.csproj Ported LayoutManager and FlowLayoutManager from Habanero.UI.csproj to Habanero.UI.Base.csproj and Habanero.UI.Win.csproj, Habanero.ui.WebGui.

--- a/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
+++ b/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
@@ -48,17 +48,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FilterController\TestCompositeFilterClause.cs" />
+    <Compile Include="FilterController\TestDataViewNullFilterClause.cs" />
+    <Compile Include="FilterController\TestFilterControlDate.cs" />
+    <Compile Include="Grid\TestReadOnlyGrid.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestDataViewFilterClauseFactory.cs" />
-    <Compile Include="TestDataViewFilterClauseFactoryWithStrings.cs" />
-    <Compile Include="TestFilterControl.cs" />
-    <Compile Include="TestFilterControlCheckBox.cs" />
-    <Compile Include="TestGridBase.cs">
+    <Compile Include="TestControlCollection.cs" />
+    <Compile Include="FilterController\TestDataViewFilterClauseFactory.cs" />
+    <Compile Include="FilterController\TestDataViewFilterClauseFactoryWithStrings.cs" />
+    <Compile Include="FilterController\TestFilterControl.cs" />
+    <Compile Include="FilterController\TestFilterControlCheckBox.cs" />
+    <Compile Include="LayoutManager\TestFlowLayoutManager.cs" />
+    <Compile Include="Grid\TestGridBase.cs">
     </Compile>
     <Compile Include="TestLabel.cs" />
+    <Compile Include="LayoutManager\TestLayoutManager.cs" />
     <Compile Include="TestListBox.cs" />
-    <Compile Include="TestMultiSelector.cs" />
-    <Compile Include="TestMultiSelectorModel.cs" />
+    <Compile Include="MultiSelector\TestMultiSelector.cs" />
+    <Compile Include="MultiSelector\TestMultiSelectorModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Habanero.Base\Habanero.Base.csproj">
