--- a/source/Habanero.UI.Win/Habanero.UI.Win.csproj
+++ b/source/Habanero.UI.Win/Habanero.UI.Win.csproj
@@ -47,6 +47,12 @@
     <Compile Include="ButtonWin.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="ControlWin.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="DateTimePickerWin.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="FilterControlWin.cs">
       <SubType>Component</SubType>
     </Compile>
