Process of porting all common UI code to UI.Base so that can be reused in UI.WIn and UI.WebGui ported ButtonsControl started ported ReadOnlyGridButtonControl continued porting GridBase continued porting ReadOnlyGrid continued porting ReadOnlyGridWithButtons

--- a/source/Habanero.UI.Base/Habanero.UI.Base.csproj
+++ b/source/Habanero.UI.Base/Habanero.UI.Base.csproj
@@ -48,7 +48,11 @@
     <Compile Include="FilterControl\FilterControlManager.cs" />
     <Compile Include="Grid\IDataGridViewColumn.cs" />
     <Compile Include="Grid\IDataGridViewSelectedRowCollection.cs" />
+    <Compile Include="Grid\IReadOnlyGrid.cs" />
+    <Compile Include="IButtonGroupControl.cs" />
     <Compile Include="IDateTimePicker.cs" />
+    <Compile Include="Grid\IReadOnlyGridWithButtons.cs" />
+    <Compile Include="IReadOnlyGridButtonsControl.cs" />
     <Compile Include="LayoutManagers\FlowLayoutManager.cs" />
     <Compile Include="Grid\GridBaseManager.cs" />
     <Compile Include="IButton.cs" />
