--- a/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
+++ b/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
@@ -48,10 +48,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ButtonsControl\TestButtonControl.cs" />
     <Compile Include="FilterController\TestCompositeFilterClause.cs" />
     <Compile Include="FilterController\TestDataViewNullFilterClause.cs" />
     <Compile Include="FilterController\TestFilterControlDate.cs" />
     <Compile Include="Grid\TestReadOnlyGrid.cs" />
+    <Compile Include="Grid\TestReadOnlyGridButtonControl.cs" />
+    <Compile Include="Grid\TestReadOnlyGridWithButtons.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestControlCollection.cs" />
     <Compile Include="FilterController\TestDataViewFilterClauseFactory.cs" />
