--- a/source/Habanero.UI.WebGUI/Habanero.UI.WebGUI.csproj
+++ b/source/Habanero.UI.WebGUI/Habanero.UI.WebGUI.csproj
@@ -44,6 +44,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ButtonGroupControlGiz.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="CheckBoxGiz.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -60,6 +63,7 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="GizmoxControlFactory.cs">
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="GridBaseGiz.cs">
       <SubType>Component</SubType>
@@ -80,6 +84,12 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReadOnlyGridGiz.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="ReadOnlyGridWithButtonsGiz.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="TextBoxGiz.cs">
       <SubType>Component</SubType>
     </Compile>
