--- a/source/Habanero.UI/Habanero.UI.csproj
+++ b/source/Habanero.UI/Habanero.UI.csproj
@@ -138,7 +138,7 @@
     <Compile Include="Forms\PictureControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Forms\ReadOnlyGridButtonControl.cs">
+    <Compile Include="Grid\ReadOnlyGridButtonControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Forms\TextBoxMapper.cs" />
