--- a/source/Habanero.UI.Win/Habanero.UI.Win.csproj
+++ b/source/Habanero.UI.Win/Habanero.UI.Win.csproj
@@ -35,6 +35,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BorderLayoutManagerWin.cs" />
     <Compile Include="ButtonGroupControlWin.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -78,6 +79,9 @@
     </Compile>
     <Compile Include="MultiSelectorWin.Designer.cs">
       <DependentUpon>MultiSelectorWin.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PanelWin.cs">
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="ReadOnlyGridWin.cs">
       <SubType>Component</SubType>
