Ported GridLayoutManager to Habanero.UI.Base - but the tests still need to be ported

--- a/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
+++ b/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
@@ -65,6 +65,7 @@
     <Compile Include="LayoutManager\TestBorderLayoutManager.cs" />
     <Compile Include="Grid\TestReadOnlyGridButtonControl.cs" />
     <Compile Include="Grid\TestReadOnlyGridWithButtons.cs" />
+    <Compile Include="LayoutManager\TestGridLayoutManager.cs" />
     <Compile Include="Mappers\TestCheckBoxMapper.cs" />
     <Compile Include="Mappers\TestControlMapper.cs" />
     <Compile Include="Mappers\TestMapperBase.cs" />
