Got the PanelFactory tests working in UI.Base for Gizmox only.

--- a/source/Habanero.UI.Base/Habanero.UI.Base.csproj
+++ b/source/Habanero.UI.Base/Habanero.UI.Base.csproj
@@ -41,8 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IControlCollection.cs" />
     <Compile Include="LayoutManagers\BorderLayoutManager.cs" />
-    <Compile Include="ControlCollection.cs" />
     <Compile Include="ControlMappers\CheckBoxMapper.cs" />
     <Compile Include="ControlMappers\ComboBoxMapper.cs" />
     <Compile Include="ControlMappers\ControlMapper.cs" />
