Removed almost everything from Habanero.WebGUI as it is all ported back into Habanero.UI.Base and Habanero.UI.WebGUI. Added filtering to GridBase in Habanero.UI.Base/Win/Giz Fixed the deleting bug in the Gizmox grid. DefaultBOCreator now takes a BusinessObjectCollection as a constructor param, so that when the BO is saved it is automatically added to the collection and hence the grid.

--- a/source/Habanero.Test.WebGUI/Habanero.Test.WebGUI.csproj
+++ b/source/Habanero.Test.WebGUI/Habanero.Test.WebGUI.csproj
@@ -79,6 +79,10 @@
       <Project>{B965CBBC-48BE-4761-9AB8-8F1AD17B8537}</Project>
       <Name>Habanero.Test</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Habanero.UI.Base\Habanero.UI.Base.csproj">
+      <Project>{18828910-F528-48F5-B56D-7C1658D0987A}</Project>
+      <Name>Habanero.UI.Base</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Habanero.Util\Habanero.Util.csproj">
       <Project>{D3B50C81-590B-429F-9761-3B676D607DFF}</Project>
       <Name>Habanero.Util</Name>
