--- a/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
+++ b/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
@@ -89,6 +89,8 @@
     <Compile Include="TestControlFactory.cs" />
     <Compile Include="Mappers\TestControlMapperCollection.cs" />
     <Compile Include="TestDateTimePickerController.cs" />
+    <Compile Include="TestDefaultBOCreator.cs" />
+    <Compile Include="TestGlobalUIRegistry.cs" />
     <Compile Include="TestLabel.cs" />
     <Compile Include="LayoutManager\TestLayoutManager.cs" />
     <Compile Include="TestListBox.cs" />
@@ -146,4 +148,7 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <PropertyGroup>
+    <PostBuildEvent>"$(SolutionDir)PostBuild.cmd" "$(SolutionDir)"  "$(TargetDir)"</PostBuildEvent>
+  </PropertyGroup>
 </Project>
