--- a/source/Habanero.UI.WebGUI/Habanero.UI.WebGUI.csproj
+++ b/source/Habanero.UI.WebGUI/Habanero.UI.WebGUI.csproj
@@ -68,9 +68,11 @@
     <Compile Include="DateTimePickerGiz.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="FormExceptionNotifier.cs" />
     <Compile Include="GroupBoxGiz.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="HabaneroAppWebGUI.cs" />
     <Compile Include="NumericUpDownGiz.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -140,6 +142,10 @@
     <ProjectReference Include="..\Habanero.Bo\Habanero.BO.csproj">
       <Project>{9ED22DDE-ED14-43CA-807A-D0A42DFBF322}</Project>
       <Name>Habanero.BO</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Habanero.Db\Habanero.DB.csproj">
+      <Project>{80FEC63C-DBD7-4DAE-882D-9CB93F738B48}</Project>
+      <Name>Habanero.DB</Name>
     </ProjectReference>
     <ProjectReference Include="..\Habanero.UI.Base\Habanero.UI.Base.csproj">
       <Project>{18828910-F528-48F5-B56D-7C1658D0987A}</Project>
